home page content added
header image added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <meta charset="utf-8">
+        <title>Home</title>
+        <link href="./styles/style.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body>
 
-        <p>This is my frist page on githubio</p>
+        <div class="header-image">
+        </div>
+
+        <img src="./assets/photo.jpg" alt="background image" class="person-image">
+        
+        <h2 class="ma-left">Zelalem Mekuria Gebremariam</h2>
+
+        <ul class="ma-left">
+            <li><a href="index.html">Home Page</a></li>
+            <li>W1D2 - About me</li>
+            <li>W1D3 - Recipe</li>
+            <li>W1D4 - Movie Review</li>
+            <li>W1D5 - this homepage</li>
+            <li>W1D6 - this homepage</li>
+        </ul>
+
+        <div class="ma-left">
+
+            <div>
+                <p>&copy; Zelalem Mekuria Gebremariam</p>
+                <p>Maharishi International University</p>
+                <p>Address: 1000 N 4th St. Fairfiled, Iowa, 52557</p>
+                <p>Email: zgebremariam@miu.edu</p>
+            </div>
+
+        </div>
     </body>
 
 </html>
