--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 
                 <div class="ma-left">
                     <span>
-                        <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a> 
                     </span>
-
+<a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a> 
                     <span>
-                        <a  href="http://jigsaw.w3.org/css-validator/check/referer"> <img src=http://jigsaw.w3.org/css-validator/images/vcss alt="Valid CSS!"/></a> 
+                        <a  href="https://jigsaw.w3.org/css-validator/check/referer"> <img src=http://jigsaw.w3.org/css-validator/images/vcss alt="Valid CSS!"/></a> 
                     </span>
                 </div>
 
