--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
         </ul>
 
-        <section>
+        <div>
 
                 <div class="ma-left">
                     <p>&copy; Zelalem Mekuria Gebremariam</p>
@@ -48,7 +48,7 @@
                     </span>
                 </div>
 
-        </section>
+        </div>
         
     </body>
 
