--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div>
                 <div class="ma-left">
                     <span>
-                        <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a> 
+                        <a href="http://validator.w3.org/check/referer"> <img src="./assets/w3c-html.png" alt="html validator"/></a> 
                     </span>
                     <span>
-                        <a  href="http://jigsaw.w3.org/css-validator/check/referer"> <img src=http://jigsaw.w3.org/css-validator/images/vcss alt="Valid CSS!"/></a> 
+                        <a  href="http://jigsaw.w3.org/css-validator/check/referer"> <img src="./assets/vcss.gif" alt="Valid CSS!"/></a> 
                     </span>
                 </div>
 
