--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="http://validator.w3.org/check?uri=https://passzola.github.io/"> <img src="./assets/w3c-html.png" alt="html validator"/></a> 
                     </span>
                     <span>
-                        <a  href="http://jigsaw.w3.org/css-validator/check?uri=https://passzola.github.io/"> <img src="./assets/vcss.gif" alt="Valid CSS!"/></a> 
+                        <a  href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/"> <img src="./assets/vcss.gif" alt="Valid CSS!"/></a> 
                     </span>
                 </div>
 
