about me page added

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         <ul class="ma-left">
             <li><a href="index.html">Home Page</a></li>
-            <li>Lab01 - About me</li>
-            <li>Lab02 - Recipe</li>
+            <li><a href="aboutme.html">About me</a></li>
+            <li><a href="pie.html">Recipe</a></li>
             <li>Lab03 - Movie Review</li>
             <li>Lab04</li>
             <li>Lab05</li>
@@ -25,7 +25,7 @@
             <li>Lab07</li>
             <li>Lab08</li>
             <li>Lab09</li>
-            <li>Lab010</li>
+            <li>Lab10</li>
             <li>Final Project</li>
         </ul>
 
