--- a/aboutme.html
+++ b/aboutme.html
@@ -14,9 +14,9 @@
 
         <hr/>
 
-        <article>
+        <div>
             <p>My name is <strong>Zelalem Gebremariam</strong> and I am <strong>Graduate Compro</strong> Student.</p>
-        </article>
+        </div>
 
         <section>
             <h3 class="h3-color">My Class</h3>
