html and css validation link added

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,10 +32,18 @@
 
         <section>
             <h3 class="h3-color">Favorite Movies</h3>
-            <ol>
-                <li>I am Legend <a href="https://www.imdb.com/title/tt0480249/?ref_=fn_al_tt_1">(IMDB)</a></li>
-                <li>The pursuite of happiness<a href="https://www.imdb.com/title/tt0454921/?ref_=tt_mv_close">(IMDB)</a></li>
+            <ol reversed>
                 <li>Avater<a href="https://www.imdb.com/title/tt0499549/?ref_=fn_al_tt_2">(IMDB)</a></li>
+                <li>The pursuite of happiness<a href="https://www.imdb.com/title/tt0454921/?ref_=tt_mv_close">(IMDB)</a></li>
+                <li>I am Legend <a href="https://www.imdb.com/title/tt0480249/?ref_=fn_al_tt_1">(IMDB)</a></li>
+                <dl>
+                    <dt>Dirctor</dt>
+                    <dd>Francis Lawrence</dd>
+                    <dt>Writer</dt>
+                    <dd>Mark Protosevich / Akiva Goldsman</dd>
+                    <dt>Genre</dt>
+                    <dd>Action / Adventure, Drama</dd>
+                </dl>
             </ol>
         </section>
 
@@ -56,5 +64,14 @@
                 <li>Henok: He is most scared of mice</li>
             </ul>
         </section>
+
+        <footer>
+            <span>
+                <a href="http://validator.w3.org/check?uri=https://passzola.github.io/aboutme.html"> <img src="./assets/w3c-html.png" alt="html validator"/></a> 
+            </span>
+            <span>
+                <a  href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/aboutme.html"> <img src="./assets/vcss.gif" alt="Valid CSS!"/></a> 
+            </span>
+        </footer>
     </body>
 </html>
