--- a/aboutme.html
+++ b/aboutme.html
@@ -35,15 +35,17 @@
             <ol reversed>
                 <li>Avater<a href="https://www.imdb.com/title/tt0499549/?ref_=fn_al_tt_2">(IMDB)</a></li>
                 <li>The pursuite of happiness<a href="https://www.imdb.com/title/tt0454921/?ref_=tt_mv_close">(IMDB)</a></li>
-                <li>I am Legend <a href="https://www.imdb.com/title/tt0480249/?ref_=fn_al_tt_1">(IMDB)</a></li>
-                <dl>
-                    <dt>Dirctor</dt>
-                    <dd>Francis Lawrence</dd>
-                    <dt>Writer</dt>
-                    <dd>Mark Protosevich / Akiva Goldsman</dd>
-                    <dt>Genre</dt>
-                    <dd>Action / Adventure, Drama</dd>
-                </dl>
+                <li>I am Legend <a href="https://www.imdb.com/title/tt0480249/?ref_=fn_al_tt_1">(IMDB)</a>
+                    <dl>
+                        <dt>Dirctor</dt>
+                        <dd>Francis Lawrence</dd>
+                        <dt>Writer</dt>
+                        <dd>Mark Protosevich / Akiva Goldsman</dd>
+                        <dt>Genre</dt>
+                        <dd>Action / Adventure, Drama</dd>
+                    </dl>
+                </li>
+                
             </ol>
         </section>
 
