--- a/aboutme.html
+++ b/aboutme.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>About me</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./styles/styleme.css" type="text/css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
         <header>
             <h1>About</h1>
             <h2>Zelalem Gebremariam</h2>
+            <a href="index.html"><i class="fa fa-home"></i></a>
+
         </header>
 
         <hr/>
