extra feature added

--- a/pie.html
+++ b/pie.html
@@ -1,3 +1,5 @@
+
+<!-- All extra features 1 to 5 are done -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -5,12 +7,13 @@
         <title>Grandma's Lemon meringue Pie</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./styles/recipe.css" type="text/css" rel="stylesheet"/>
+        <link href="https://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" type="image/gif" rel="shortcut icon"/> 
     </head>
 
     <body>
         <div class="container">
             <header>
-                <h1>Grandma's Lemon Meringue Pie</h1>
+                <h1><span>Grandma's Lemon Meringue Pie</span></h1>
 
                 <img src="http://mumstudents.org/cs472/2014-09/Homework/1/pie.jpg" alt="Lemon Meringue Pie" class="product-image"/>
                 <div class="pie-summery">
@@ -26,7 +29,7 @@
             <hr/>
 
             <section>
-                <h2>INGREDIENTS</h2>
+                <h2><span>INGREDIENTS</span></h2>
                 <ul>
                     <li>1 cup white sugar</li>
                     <li>2 <abbr title="tablespoons">tbsp</abbr> all-purpose flour</li>
@@ -43,7 +46,7 @@
             </section>
             <hr/>
             <section>
-                <h2>DIRECTIONS</h2>
+                <h2><span>DIRECTIONS</span></h2>
 
                 <ol>
                     <li><strong>Preheat Oven:</strong> Preheat oven to 350 degrees F (175 degrees C).</li>
@@ -75,7 +78,7 @@
             <hr/>
 
             <section>
-                <h2>USER COMMENTS</h2>
+                <h2><span>USER COMMENTS</span></h2>
             <blockquote>
                 <p>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.</p>
                 <p>- Emilie S.</p>
@@ -99,12 +102,12 @@
             <hr/>
 
             <section>
-                <h2>LINKS</h2>
+                <h2><span>LINKS</span></h2>
                 <p><a href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other meringue pie recipes</a></p>
                 <p><a href="./index.html">Home</a></p>
 <pre>
-Copyright &copy; 2012 Granny's Pies
-    A Granny's Pies Production
+Copyright Â© 2012 Granny's Pies
+     A Granny's Pies Production
             All rights reserved
 </pre>
                 <span>
