--- a/pie.html
+++ b/pie.html
@@ -15,7 +15,7 @@
             <header>
                 <h1><span>Grandma's Lemon Meringue Pie</span></h1>
 
-                <img src="http://mumstudents.org/cs472/2014-09/Homework/1/pie.jpg" alt="Lemon Meringue Pie" class="product-image"/>
+                <img src="./assets/pie.jpg" alt="Lemon Meringue Pie" class="product-image"/>
                 <div class="pie-summery">
                     <p>One 9-inch pie</p>
                     <p>30 Min - Prep time</p>
@@ -111,10 +111,10 @@ Copyright Â© 2012 Granny's Pies
             All rights reserved
 </pre>
                 <span>
-                    <a href="http://validator.w3.org/check?uri=https://passzola.github.io/pie.html"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a> 
+                    <a href="http://validator.w3.org/check?uri=https://passzola.github.io/pie.html"> <img src="./assets/w3c-html.png" alt="html validator"/></a> 
                 </span>
                 <span>
-                    <a  href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/pie.html"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt="Valid CSS!"/></a> 
+                    <a  href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/pie.html"> <img src="./assets/vcss.gif" alt="Valid CSS!"/></a> 
                 </span>
             </section>
         </div>
