--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="index.html">Home Page</a></li>
             <li><a href="aboutme.html">About me</a></li>
             <li><a href="pie.html">Recipe</a></li>
-            <li><a href="#">Movie Review</a></li>
+            <li><a href="tmnt.html">Movie Review</a></li>
             <li>Lab04</li>
             <li>Lab05</li>
             <li>Lab06</li>
