--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="aboutme.html">About me</a></li>
             <li><a href="pie.html">Recipe</a></li>
             <li><a href="tmnt.html">Movie Review</a></li>
-            <li>Lab04</li>
+            <li><a href="grade.html">Grades</a></li>
             <li>Lab05</li>
             <li>Lab06</li>
             <li>Lab07</li>
