--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="pie.html">Recipe</a></li>
             <li><a href="tmnt.html">Movie Review</a></li>
             <li><a href="grade.html">Grades</a></li>
-            <li>Lab05</li>
+            <li><a href="signup.html">Signup</a></li>
             <li>Lab06</li>
             <li>Lab07</li>
             <li>Lab08</li>
