fix on signup css

--- a/signup.html
+++ b/signup.html
@@ -74,7 +74,7 @@
                 Thank you for using our site.
             </p>
             <p>Results and page &copy; Copyright NerdLuv Inc.</p>
-            <p><img src="./assets/back.gif" alt="back" style="vertical-align: middle;" /> <a
+            <p><img src="./assets/back.gif" alt="back" class="back-to-home" /> <a
                     href="http://www.humanmetrics.com/cgi-win/JTypes2asp" class="red-nonunderline-link">Back to
                     front page</a></p>
 
