--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <li><a href="tmnt.html">Movie Review</a></li>
             <li><a href="grade.html">Grades</a></li>
             <li><a href="signup.html">Signup</a></li>
-            <li>Lab06</li>
-            <li>Lab07</li>
+            <li><a href="jsexerciseslab.html">Javascript Excercise Lab</a></li>
+            <li><a href="onclick.html">On Click Alert</a></li>
+            <li><a href="tip.html">Tip Calculator</a></li>
             <li>Lab08</li>
             <li>Lab09</li>
             <li>Lab10</li>
