decoratemytext.html and solution.txt page added

--- a/index.html
+++ b/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Home</title>
-        <link href="./styles/style.css" type="text/css" rel="stylesheet"/>
-    </head>
 
-    <body>
-        <header class="header-image">
-        </header>
+<head>
+    <meta charset="utf-8">
+    <title>Home</title>
+    <link href="./styles/style.css" type="text/css" rel="stylesheet" />
+</head>
 
-        <img src="./assets/photo.jpg" alt="background image" class="person-image">
-        
-        <h2 class="ma-left">Zelalem Mekuria Gebremariam</h2>
+<body>
+    <header class="header-image">
+    </header>
 
-        <ul class="ma-left">
-            <li><a href="index.html">Home Page</a></li>
-            <li><a href="aboutme.html">About me</a></li>
-            <li><a href="pie.html">Recipe</a></li>
-            <li><a href="tmnt.html">Movie Review</a></li>
-            <li><a href="grade.html">Grades</a></li>
-            <li><a href="signup.html">Signup</a></li>
-            <li><a href="jsexerciseslab.html">Javascript Excercise Lab</a></li>
-            <li><a href="onclick.html">On Click Alert</a></li>
-            <li><a href="tip.html">Tip Calculator</a></li>
-            <li>Lab08</li>
-            <li>Lab09</li>
-            <li>Lab10</li>
-            <li>Final Project</li>
-        </ul>
+    <img src="./assets/photo.jpg" alt="background image" class="person-image">
 
-        <div>
-                <div class="ma-left">
-                    <span>
-                        <a href="http://validator.w3.org/check?uri=https://passzola.github.io/index.html"> <img src="./assets/w3c-html.png" alt="html validator"/></a> 
-                    </span>
-                    <span>
-                        <a  href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/index.html"> <img src="./assets/vcss.gif" alt="Valid CSS!"/></a> 
-                    </span>
-                </div>
+    <h2 class="ma-left">Zelalem Mekuria Gebremariam</h2>
 
+    <ul class="ma-left">
+        <li><a href="index.html">Home Page</a></li>
+        <li><a href="aboutme.html">About me</a></li>
+        <li><a href="pie.html">Recipe</a></li>
+        <li><a href="tmnt.html">Movie Review</a></li>
+        <li><a href="grade.html">Grades</a></li>
+        <li><a href="signup.html">Signup</a></li>
+        <li><a href="jsexerciseslab.html">Javascript Excercise Lab</a></li>
+        <li><a href="onclick.html">On Click Alert</a></li>
+        <li><a href="tip.html">Tip Calculator</a></li>
+        <li><a href="solution.txt">Answers</a></li>
+        <li><a href="decoratemytext.html">Decorate My Text</a></li>
+        <li>Lab10</li>
+        <li>Final Project</li>
+    </ul>
+
+    <div>
+        <div class="ma-left">
+            <span>
+                <a href="http://validator.w3.org/check?uri=https://passzola.github.io/index.html"> <img
+                        src="./assets/w3c-html.png" alt="html validator" /></a>
+            </span>
+            <span>
+                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/index.html"> <img
+                        src="./assets/vcss.gif" alt="Valid CSS!" /></a>
+            </span>
         </div>
-        
-    </body>
+
+    </div>
+
+</body>
 
 </html>
