link name changed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="jsexerciseslab.html">Javascript Excercise Lab</a></li>
         <li><a href="onclick.html">On Click Alert</a></li>
         <li><a href="tip.html">Tip Calculator</a></li>
-        <li><a href="solution.txt">Answers</a></li>
+        <li><a href="solution.txt">Javascript Timer Excercise</a></li>
         <li><a href="decoratemytext.html">Decorate My Text</a></li>
         <li>Lab10</li>
         <li>Final Project</li>
