--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <span>
                 <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/index.html"> <img
                         src="./assets/vcss.gif" alt="Valid CSS!" /></a>
+                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/index.html"> <img
+                        src="./assets/vcss.gif" alt="Valid CSS!" /></a>
             </span>
         </div>
 
