--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="tip.html">Tip Calculator</a></li>
         <li><a href="solution.txt">Javascript Timer Excercise</a></li>
         <li><a href="decoratemytext.html">Decorate My Text</a></li>
-        <li>Lab10</li>
+        <li><a href="ascii.html">ASCII Animation</a></li>
         <li>Final Project</li>
     </ul>
 
