--- a/ascii.html
+++ b/ascii.html
@@ -59,8 +59,8 @@
                 src="./assets/jslint.png" alt="Valid CSS!" /></a><br />
     </div>
 
-    <script src="./js/animations.js" type="text/javascript"></script>
-    <script src="./js/ascii.js" type="text/javascript"></script>
+    <script src="./js/animations.js"></script>
+    <script src="./js/ascii.js"></script>
 
 </body>
 
