--- a/ascii.html
+++ b/ascii.html
@@ -52,11 +52,11 @@
 
     <div class="validator">
         <a href="http://validator.w3.org/check?uri=https://passzola.github.io/ascii.html"> <img
-                src="./assets/w3c-html.png" alt="html validator" /></a><br />
+                src="./assets/w3c-html.png" alt="html validator"></a><br />
         <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/ascii.html"> <img
-                src="./assets/vcss.gif" alt="Valid CSS!" /></a><br />
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://passzola.github.io/ascii.html"> <img
-                src="./assets/jslint.png" alt="Valid CSS!" /></a><br />
+                src="./assets/vcss.gif" alt="Valid CSS!"></a><br />
+        <a href="https://www.jslint.com/check?assci.html"> <img src="./assets/jslint.png"
+                alt="JSLint Validator!"></a><br />
     </div>
 
     <script src="./js/animations.js"></script>
