added scope and Module excercisee

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <li><a href="solution.txt">Javascript Timer Excercise</a></li>
         <li><a href="decoratemytext.html">Decorate My Text</a></li>
         <li><a href="ascii.html">ASCII Animation</a></li>
-        <li>Final Project</li>
+        <li><a href="scopeexcercise.txt">Scope Exercise</a></li>
+        <li><a href="moduleexcercise.txt">Module Exercise</a></li>
+        <li><a href="#">Modules and Closure Lab</a></li>
     </ul>
 
     <div>
