Module and closure lab added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <li><a href="ascii.html">ASCII Animation</a></li>
         <li><a href="scopeexcercise.txt">Scope Exercise</a></li>
         <li><a href="moduleexcercise.txt">Module Exercise</a></li>
-        <li><a href="#">Modules and Closure Lab</a></li>
+        <li><a href="setinterval.html">Q1(Rudy)-Module and Closure Lab</a></li>
+        <li><a href="account.html">Q2(Account)-Module and Closure Lab</a></li>
     </ul>
 
     <div>
