--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link href="./styles/style.css" type="text/css" rel="stylesheet" />
+    <link href="styles/style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -32,6 +32,8 @@
         <li><a href="moduleexcercise.txt">Module Exercise</a></li>
         <li><a href="setinterval.html">Q1(Rudy)-Module and Closure Lab</a></li>
         <li><a href="account.html">Q2(Account)-Module and Closure Lab</a></li>
+        <li><a href="jqueryquiz1.txt">jquery quiz 1</a></li>
+        <li><a href="maze.html">Mouse Maze</a></li>
     </ul>
 
     <div>
