link added to the index page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="account.html">Q2(Account)-Module and Closure Lab</a></li>
         <li><a href="jqueryquiz1.txt">jquery quiz 1</a></li>
         <li><a href="maze.html">Mouse Maze</a></li>
+        <li><a href="jqueryquize2.txt">jquery quiz 2</a></li>
     </ul>
 
     <div>
