jquery quiz 3 and Fifteen puzel added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <li><a href="jqueryquiz1.txt">jquery quiz 1</a></li>
         <li><a href="maze.html">Mouse Maze</a></li>
         <li><a href="jqueryquize2.txt">jquery quiz 2</a></li>
+        <li><a href="fifteen.html">DOM and Events</a></li>
+        <li><a href="jqueryquiz3.txt">jquery quiz 3</a></li>
+
     </ul>
 
     <div>
